welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:4: error: not found: value estSurBuscuit
  if (estSurBuscuit() == true){
      ^RunFour:5: error: not found: value nbBiscuit
    nbBiscuits = nbBiscuit + 1
                 ^