welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuits: Int = 0
while (nbBiscuits != 4) {
  avance()
  if (estSurBuscuit() == true){
    nbBiscuits = nbBiscuit + 1
  }
}